--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,114 @@
+// Custom Theming for Angular Material
+// For more information: https://material.angular.io/guide/theming
+@use "@angular/material" as mat;
+// Plus imports for other components in your app.
+
+// Include the common styles for Angular Material. We include this here so that you only
+// have to load a single css file for Angular Material in your app.
+// Be sure that you only ever include this mixin once!
+@include mat.core();
+
+// Define the palettes for your theme using the Material Design palettes available in palette.scss
+// (imported above). For each palette, you can optionally specify a default, lighter, and darker
+// hue. Available color palettes: https://material.io/design/color/
+$frontend-challenge-mottu-primary: mat.define-palette(mat.$indigo-palette);
+$frontend-challenge-mottu-accent: mat.define-palette(
+  mat.$pink-palette,
+  A200,
+  A100,
+  A400
+);
+
+// The warn palette is optional (defaults to red).
+$frontend-challenge-mottu-warn: mat.define-palette(mat.$red-palette);
+
+// Create the theme object. A theme consists of configurations for individual
+// theming systems such as "color" or "typography".
+$frontend-challenge-mottu-theme: mat.define-light-theme(
+  (
+    color: (
+      primary: $frontend-challenge-mottu-primary,
+      accent: $frontend-challenge-mottu-accent,
+      warn: $frontend-challenge-mottu-warn,
+    ),
+  )
+);
+
+// Include theme styles for core and each component used in your app.
+// Alternatively, you can import and @include the theme mixins for each component
+// that you are using.
+@include mat.all-component-themes($frontend-challenge-mottu-theme);
+
 /* You can add global styles to this file, and also import other style files */
+.font-poppins {
+  font-family: "Poppins", sans-serif;
+}
+
+.custom-mat-form-field .mat-input-element {
+  color: #ff0000;
+}
+
+.font-creepster {
+  font-family: "Creepster", sans-serif;
+}
+
+html,
+body {
+  height: 100%;
+}
+
+body {
+  background: #1f1f1f;
+  margin: 0;
+}
+
+p {
+  margin: 0;
+}
+
+::-webkit-scrollbar {
+  width: 0.3rem;
+}
+
+::-webkit-scrollbar-track {
+  background: rgba(143, 143, 143, 0.274);
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: rgba(148, 148, 148, 0.74);
+  border-radius: 10px;
+}
+
+@keyframes fade-in {
+  from {
+    opacity: 0;
+  }
+}
+
+@keyframes fade-out {
+  to {
+    opacity: 0;
+  }
+}
+
+@keyframes slide-from-right {
+  from {
+    transform: translateX(30px);
+  }
+}
+
+@keyframes slide-to-left {
+  to {
+    transform: translateX(-30px);
+  }
+}
+
+::view-transition-old(root) {
+  animation: 90ms cubic-bezier(0.4, 0, 1, 1) both fade-out,
+    300ms cubic-bezier(0.4, 0, 0.2, 1) both slide-to-left;
+}
+
+::view-transition-new(root) {
+  animation: 210ms cubic-bezier(0, 0, 0.2, 1) 90ms both fade-in,
+    300ms cubic-bezier(0.4, 0, 0.2, 1) both slide-from-right;
+}
