--- a/src/app/components/feedback/feedback.component.scss
+++ b/src/app/components/feedback/feedback.component.scss
@@ -7,7 +7,7 @@
   align-items: center;
   justify-content: center;
   flex-direction: column;
-  width: 720px;
+  width: 100%;
   height: 511px;
   margin-top: 50px;
 
